--- a/applications/neha_12_newpngapp_590/index.html
+++ b/applications/neha_12_newpngapp_590/index.html
@@ -93,15 +93,6 @@ img {
     <div class="owl-carousel owl-demo">
 
 			<div class="app_feature_list">
-			<a class="item link" href="staticpage_3294.html" rel="external" data-ajax="flase"  >
-																	<img src="images/staticpage.png " />
-										</a>
-		<a href="staticpage_3294.html" rel="external" data-ajax="flase"  >
-				<label>multi page</label>
-		</a>
-	</div>
-
-			<div class="app_feature_list">
 			<a class="item link" href="video_3295.html" rel="external" data-ajax="flase"  >
 																	<img src="images/video.png " />
 										</a>
@@ -115,7 +106,7 @@ img {
 																	<img src="images/video.png " />
 										</a>
 		<a href="video_3305.html" rel="external" data-ajax="flase"  >
-				<label>Videos</label>
+				<label>Videos pages addresss</label>
 		</a>
 	</div>
 
@@ -124,7 +115,16 @@ img {
 																	<img src="images/staticpage.png " />
 										</a>
 		<a href="staticpage_3308.html" rel="external" data-ajax="flase"  >
-				<label>StaticPage</label>
+				<label>interview questions address</label>
+		</a>
+	</div>
+
+			<div class="app_feature_list">
+			<a class="item link" href="photosub_3311.html" rel="external" data-ajax="flase"  >
+																	<img src="images/photosub.png " />
+										</a>
+		<a href="photosub_3311.html" rel="external" data-ajax="flase"  >
+				<label>Photos</label>
 		</a>
 	</div>
 
