--- a/applications/neha_12_newpngapp_590/video_3295.html
+++ b/applications/neha_12_newpngapp_590/video_3295.html
@@ -114,7 +114,14 @@ $(document).ready(function(){
 
 	
 
-			<p>No video upload</p>
+			    <ul data-role="listview"><li><a href='video_detail_20.html'><img src='https://i1.ytimg.com/vi/4lCIgfr-EaA/hqdefault.jpg'  /><h2>Kaise Mujhe Tum-Ghajini Blu-Ray Song [HD]</h2><p>Kaise Mujhe Tum Mil Gayee Ghajini BluRay Song HD
+
+
+
+Singers : Benny Dayal And Shreya Ghoshal
+Ly</p></a></li><li><a href='video_detail_24.html'><img src='https://i1.ytimg.com/vi/TWNgumRd2EI/hqdefault.jpg'  /><h2>test</h2><p>Bachna Ee Haseeno
+Ranbir kapoor</p></a></li><li><a href='video_detail_156.html'><img src='https://i1.ytimg.com/vi/UuCpOlfYpT8/hqdefault.jpg'  /><h2>Panchatantra Tales in Hindi -  The Blue Jackal</h2><p>By a strange accident, a jackal turns blue! The clever animal takes advantage of his situation, but </p></a></li><li><a href='video_detail_160.html'><img src='https://i1.ytimg.com/vi/22ShyRHSvag/hqdefault.jpg'  /><h2>Panchatantra Tales in Hindi - The Mice and the Elephant</h2><p>Breaking the notions of big and small, powerful and weak, this is a story that teaches us never to u</p></a></li></ul>
+
 
             
 
