--- a/applications/amitoj_4_redthreemenu_739/video_3967.html
+++ b/applications/amitoj_4_redthreemenu_739/video_3967.html
@@ -86,7 +86,7 @@ $(document).ready(function(){
 
   <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/home_icon.png" alt="home icon" /></a>
 
-    <h1>Videos</h1>
+    <h1>Optin Form</h1>
 
     <a class="help_link"><img src="images/help_icon.png" alt="help icon" /></a> </div>
 
@@ -98,7 +98,7 @@ $(document).ready(function(){
 
   <a href="index.html" class="refresh_link ui-link ui-btn-left ui-btn ui-shadow ui-corner-all" data-role="button" rel="external" data-ajax="false" role="button"><img alt="home icon" src="images/home_icon.png"></a>
 
-    <h1>Videos</h1>
+    <h1>Optin Form</h1>
 
     <a class="help_link ui-link ui-btn-right ui-btn ui-shadow ui-corner-all" data-role="button" role="button"><img alt="help icon" src="images/help_icon.png"></a> </div>
 
@@ -114,12 +114,7 @@ $(document).ready(function(){
 
 	
 
-			    <ul data-role="listview"><li><a href='video_detail_588.html'><img src='https://i1.ytimg.com/vi/PI6K44SsivM/hqdefault.jpg'  /><h2>Bubble Guppies  </h2><p>Bubble guppies
-Bubble guppies episodes
-Bubble guppies songs
-Bubble guppies song
-Bubble guppies bones</p></a></li><li><a href='video_detail_589.html'><img src='https://i.ytimg.com/vi/12PWq22E9CQ/hqdefault.jpg'  /><h2>ULTIMATE</h2><p>AC4 MUSIC VIDEO: http://youtu.be/WpMt2vzrIxs WATCH BLOOPERS & MORE: http://bit.ly/AC3XTRAS GET THE R</p></a></li></ul>
-
+			<p class="no_data">No video upload</p>
 
             
 
