--- a/applications/RamaLondon_jjdotcom_779/index.html
+++ b/applications/RamaLondon_jjdotcom_779/index.html
@@ -105,7 +105,7 @@ img {
 						</td>
 						<td>
 							<a href="staticpage_4105.html" rel="external" data-ajax="flase" >
-								<label>HAND Cafe JonneyJay.com</label>
+								<label>JonneyJay.com   Cafe in your hand</label>
 							</a>
 						</td>
 					</tr>
