--- a/applications/vanessabeaton_HotSpotHero_765/staticpage_4059.html
+++ b/applications/vanessabeaton_HotSpotHero_765/staticpage_4059.html
@@ -85,15 +85,7 @@ img {
 	 <li><a rel="external" data-ajax="flase"  class="item link" href="staticpage_4059_8230.html">
                                 	<img src="http://app-gorilla.com/members/wizard/images/no_thumb.jpg" class="ui-li-thumb">
                                 <h2>
-                StaticPage                </h2>
-                <p></p>
-                
-            </a></li>
-	
-		 <li><a rel="external" data-ajax="flase"  class="item link" href="staticpage_4059_8231.html">
-                                	<img src="http://app-gorilla.com/members/wizard/images/no_thumb.jpg" class="ui-li-thumb">
-                                <h2>
-                Cal                </h2>
+                Today                </h2>
                 <p></p>
                 
             </a></li>
