--- a/applications/vanessabeaton_HotSpotHero_765/index.html
+++ b/applications/vanessabeaton_HotSpotHero_765/index.html
@@ -112,7 +112,7 @@ img {
 						<td>
 						
 							<a class="item link" rel="external" data-ajax="flase" href="staticpage_4059.html">
-																	<img src="images/staticpage.png " />
+																	<img src="icon(63).png" />
 															</a>
 						</td>
 						<td>
