--- a/applications/vanessabeaton_HotSpotHero_765/staticpage_4059_8230.html
+++ b/applications/vanessabeaton_HotSpotHero_765/staticpage_4059_8230.html
@@ -70,7 +70,7 @@ img {
 
   <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/back_btn.png" alt="home icon" /></a>
 
-    <h1>StaticPage</h1>
+    <h1>Today</h1>
 
     <a class="help_link"><img src="images/help_icon.png" alt="help icon" /></a> </div>
 
@@ -84,7 +84,7 @@ img {
 
   
 
-  <pre style="padding: 8.5px; font-family: Menlo, Monaco, Consolas, 'Courier New', monospace; font-size: 12.025px; margin-bottom: 9px; line-height: 18px; white-space: nowrap; overflow: auto;"><script type="text/javascript" src="http://occpaddling.com/?ai1ec_super_widget"></script></pre>
+  <script type="text/javascript" src="http://occpaddling.com/?ai1ec_super_widget"></script><div class="timely-calendar" data-action="day"></div>
 
   </div>
 
